# CGJM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.txt  appveyor.yml
dependencies/freeglut/: FindFREEGLUT.cmake
projects/3DTangram/: CMakeLists.txt
projects/3DTangram/res/: 3DTvertex.shader
projects/3DTangram/src/: 3d_tangram.cpp
projects/matrix/: CMakeLists.txt
projects/matrix/includes/: mat.h
projects/matrix/src/: Mat2.cpp  Mat3.cpp  Mat4.cpp  transforms.cpp
projects/matrix/tests/: mat2Test.cpp  mat3Test.cpp  mat4Test.cpp  matTest.cpp
projects/quaternions/: CMakeLists.txt
projects/quaternions/includes/: quat.h
projects/quaternions/res/: Quat3Dfragment.shader  Quat3Dvertex.shader
projects/quaternions/src/: quat.cpp
projects/quaternions/tests/: quat_tangram.cpp
projects/scene/: CMakeLists.txt
projects/scene/includes/: CGJengine.h  Camera.h  FreeCamera.h  InputManager.h  OBJMesh.h  ResourceManager.h  SceneGraph.h  SphereCamera.h
projects/scene/res/: Quat3Dfragment.shader  cube_fs.glsl  cube_vs.glsl  floorf.glsl  floorv.glsl  tablef.glsl  tablev.glsl  tangramOBJv.shader
projects/scene/src/: Camera.cpp  FreeCamera.cpp  InputManager.cpp  OBJMesh.cpp  ResourceManager.cpp  SceneGraph.cpp  SphereCamera.cpp
projects/scene/tests/: animation.cpp  animation.h  scene.cpp  scene.h  scene_viewer.cpp
projects/shader/: CMakeLists.txt
projects/shader/includes/: Shader.h  glerrors.h
projects/shader/res/: fragment.shader  vertex.shader
projects/shader/src/: Shader.cpp  glerror.cpp
projects/shader/tests/: shader_test.cpp
projects/vector/: CMakeLists.txt
projects/vector/includes/: vec.h
projects/vector/src/: .Vec2.cpp.swp  Vec2.cpp  Vec3.cpp  Vec4.cpp  test  vec.h  vecTest.cpp
projects/vector/tests/: vecTest.cpp
